[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyogero"
version = "0.13.0"
description = "Ogero API module"
readme = "README.md"
license = "MIT"
authors = [{ name = "Omar Raad", email = "omarraad@gmail.com" }]
keywords = ["ogero", "internet", "api", "lebanon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12,<4"
dependencies = [
    "requests>=2.32.3,<=2.32.5",
    "beautifulsoup4>=4.12.3,<=4.13.3",
    "aiohttp>=3.10.3,<=3.13.3",
    "pydantic>=2.0,<=2.12.2",
    "tzdata>=2024.1",
]

[project.urls]
Homepage = "https://github.com/oraad/pyogero"
Repository = "https://github.com/oraad/pyogero"
Issues = "https://github.com/oraad/pyogero/issues/"

[tool.setuptools.packages.find]
include = ["pyogero*"]

[tool.setuptools.package-data]
pyogero = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.24",
    "requests-mock>=1.12.1",
    "aioresponses>=0.7.3",
    "ruff==0.15.13",
    "build",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
log_cli = "true"
log_level = "INFO"
markers = [
    "integration: live Ogero API (requires ogero.json)",
]
